fix: update Mermaid colorscheme to improve Text readability

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -8,7 +8,8 @@ html
   --bg: var(--light)
   --code-bg: var(--accent)
   --overlay: var(--light)
-  --text: #111
+  //--text: #111
+  --text: #141010
   --font: 'Metropolis', sans-serif
   --border-color: #eee
   --inline-color: darkgoldenrod
@@ -24,6 +25,7 @@ html
     --theme: rgb(48,209,88)
     --bg: var(--dark)
     --text: #eee
+    --text-light: #fff
     --accent: var(--bubble)
     --overlay: var(--bubble)
     --border-color: transparent
